--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
-    "react": "^16.12.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.0",
+    "axios": "^0.19.0",
+    "react": "^16.9.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.9.0",
+    "react-use-form-state": "^0.12.0",
+    "reusable": "^1.0.0-alpha.12",
+    "styled-components": "^4.4.1",
+    "styled-reset": "^4.0.8",
     "typescript": "3.7.2"
   },
   "scripts": {
