--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "gh-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ROGAL12321.github.io/GH-App",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
+    "@types/node": "^12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.0",
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
     "axios": "^0.19.0",
+    "axios-extensions": "^3.0.6",
+    "gh-pages": "^2.1.1",
+    "graphql": "^14.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -26,6 +34,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
