--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "homepage": "https://ROGAL12321.github.io/GH-App",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@rehooks/local-storage": "^1.7.0",
     "@testing-library/react-hooks": "^3.2.1",
     "@types/jest": "24.0.23",
     "@types/node": "^12.12.14",
     "@types/react": "16.9.13",
     "@types/react-dom": "16.9.4",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/rebass": "^4.0.3",
+    "@types/storage-helper": "^1.4.0",
     "@types/styled-components": "^4.4.0",
+    "add": "^2.0.6",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
@@ -21,14 +26,18 @@
     "graphql": "^14.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.9.0",
     "react-use-form-state": "^0.12.0",
+    "rebass": "^4.0.7",
     "reusable": "^1.0.0-alpha.12",
+    "storage-helper": "^1.4.1",
     "styled-components": "^4.4.1",
     "styled-reset": "^4.0.8",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "yarn": "^1.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
